Refactors and improvements.

--- a/Assets/NetworkScopes/Editor/com.diwaniyalabs.networkscopes.editor.asmdef
+++ b/Assets/NetworkScopes/Editor/com.diwaniyalabs.networkscopes.editor.asmdef
@@ -1,8 +1,7 @@
 {
     "name": "com.diwaniyalabs.networkscopes.editor",
     "references": [
-        "com.diwaniyalabs.networkscopes",
-        "com.diwaniyalabs.codegeneration"
+        "com.diwaniyalabs.networkscopes"
     ],
     "optionalUnityReferences": [],
     "includePlatforms": [
